menu-list + heading z-index fixes

--- a/pingbuller/css/style.css
+++ b/pingbuller/css/style.css
@@ -49,7 +49,7 @@ body {
 }
 .menu-list{
 	display: none;
-	z-index: 2;
+	z-index: 999;
 
 	padding-left: 0;
 	position: absolute;
@@ -93,7 +93,7 @@ body {
 }
 .header-slider-h1{
 	position: relative;
-	z-index: 999;
+	z-index: 5;
 
 	margin: 0 auto;
 	/*padding-left: 20%;*/
@@ -108,7 +108,7 @@ body {
 }
 .header-slider-h2{
 	position: relative;
-	z-index: 999;
+	z-index: 5;
 
 	/*padding-left: 20%;*/
 	margin: 0 auto;
